# bamboo

./: .bamboo.toml  .gitignore  AGENTS.md  Cargo.toml  README.md
src/: app.rs  config.rs  events.rs  main.rs  pane.rs  pty.rs  terminal.rs  ui.rs  wizard.rs  worktree.rs
