[package]
name = "bamboo"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui   = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"
portable-pty = "0.9"
alacritty_terminal = "0.25"
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
parking_lot = "0.12"
anyhow    = "1"
dirs      = "5"
